--- a/app/views/notifications/show.html.erb
+++ b/app/views/notifications/show.html.erb
@@ -18,10 +18,11 @@
                   :class => 'btn pull-right' %>
       <h3>
         <%= @notification.event.kind %>
-        <small>
-          (<%= time_ago_in_words( @notification.created_at ) %> ago)
-        </small>
       </h3>
+
+      <small>
+        <%= @notification.created_at.to_s :human_verbose %>
+      </small>
 
       <p class='muted'><%= @notification.event.user.name %></p>
 
