--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -11,7 +11,12 @@
     <li class=<%= 'active' if current_page? user_following_path( @user ) %> >
       <%= link_to 'Following', user_following_path( @user ) %>
     </li>
-
+      
+    <% if @user == current_user %>
+      <li class=<%= 'active' if current_page? edit_user_registration_path( @user ) %> >
+        <%= link_to 'Edit Account', edit_user_registration_path( @user ) %>
+      </li>
+    <% end %>
   </ul>
 
   <%= yield %>
