--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,35 @@
-<h2>Forgot your password?</h2>
+<h2>Shoot.</h2>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+<%= form_for resource, 
+             :as => resource_name, 
+             :url => password_path(resource_name), 
+             :html => { :method => :post, :class => 'form-horizontal' } do |f| %>
+
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+  <%= field_set_tag 'Enter your email and we\'ll tell you how to reset your password.' do %>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
+  <div class='control-group'>
+    <%= f.label :email, :class => 'control-label' %>
+    <div class='controls'>
+      <%= f.email_field :email, :autofocus => true %>
+    </div>
+  </div>
+
+  <% end %>
+
+  <div>
+    <div class='controls'>
+      <%= f.submit "Send me reset password instructions", 
+                   :class => 'btn btn-primary btn-large' %>
+      <%= link_to "Sign in", 
+                  new_session_path(resource_name),
+                  :class => 'btn btn-link' %>
+      <%= link_to "Sign up", 
+                  new_registration_path(resource_name),
+                  :class => 'btn btn-link' %>
+    </div>
+  </div>
+
 <% end %>
 
-<%= render "devise/shared/links" %>
