Using Searchify to provide full-text search for Users and Events.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -49,7 +49,7 @@
 
 <% if user_signed_in? %>
 
-  <form class="navbar-search pull-right" action="<%= users_path %>">
+  <form class="navbar-search pull-right" action="<%= search_results_path %>">
 
     <input type="text" 
           name="search_terms" 
