Improving adding class to searchify indexing, and ensuring that user results are always displayed, no matter how many event results there are.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -54,7 +54,7 @@
     <input type="text" 
           name="search_terms" 
           class="search-query" 
-          placeholder="Search for People" />
+          placeholder="Search Events and People" />
 
   </form>
 
