--- a/app/views/search_results/index.html.erb
+++ b/app/views/search_results/index.html.erb
@@ -4,6 +4,8 @@
 
 <section id='userSearchResults'>
 
+<p class='lead'>Users</p>
+
 <ul class='unstyled'>
 
   <% @users.each do |user| %>
@@ -47,6 +49,8 @@
 </section>
 
 <section id='eventSearchResults'>
+
+<p class='lead'>Events</p>
   
   <% @events.each do |event| %>
 
