--- a/app/views/search_results/index.html.erb
+++ b/app/views/search_results/index.html.erb
@@ -2,90 +2,120 @@
   <h2>Search results for '<%= @search_terms %>'</h2>
 </header>
 
+<% unless @users.empty? %>
+
 <section id='userSearchResults'>
 
-<p class='lead'>Users</p>
+  <p class='lead'>Users</p>
 
-<ul class='unstyled'>
+  <ul class='unstyled'>
 
-  <% @users.each do |user| %>
+    <% @users.each do |user| %>
 
-    <li class='row'>
-      
-      <div class='span4'>
-        <%= render :partial => 'users/user_card',
-                   :locals  => { :user          => user,
-                                 :featured_user => false } %>
-      </div>
+      <li class='row'>
+        
+        <div class='span4'>
+          <%= render :partial => 'users/user_card',
+                    :locals  => { :user          => user,
+                                  :featured_user => false } %>
+        </div>
 
-      <div class='span7'>
-        <p class='muted'>
-          <%= user.description %>
-        </p>
-      </div>
+        <div class='span7'>
+          <p class='muted'>
+            <%= user.description %>
+          </p>
+        </div>
 
-      <div class='span1'>
+        <div class='span1'>
 
-        <% if current_user.follows? user %>
+          <% if current_user.follows? user %>
 
-          <span class='label label-success'>following</span>
+            <span class='label label-success'>following</span>
 
-        <% else %>
+          <% else %>
 
-          <%= link_to 'Follow', 
-              create_following_path( :followed_user_id => user.id ), 
-              :method => :post,
-              :class  => 'btn' %>
+            <%= link_to 'Follow', 
+                create_following_path( :followed_user_id => user.id ), 
+                :method => :post,
+                :class  => 'btn' %>
 
-        <% end %>
+          <% end %>
 
-      </div>
-    </li>
+        </div>
+      </li>
 
-  <% end %>
+    <% end %>
 
-</ul>
+  </ul>
 
 </section>
 
-<section id='eventSearchResults'>
+<% end %>
 
-<p class='lead'>Events</p>
-  
-  <% @events.each do |event| %>
+<% unless @events.empty? %>
 
-    <div class='row'>
+  <section id='eventSearchResults'>
 
-      <div class='span12 media event-card'>
+    <p class='lead'>Events</p>
+    
+    <% @events.each do |event| %>
 
-        <%= link_to user_event_path( event.user, event ), :class => 'pull-left' do %>
-          <%= image_tag gravatar_url( event.user, 64 ), 
-                        :class => 'media-object img-rounded',
-                        'data-src' => 'holder.js/64x64' %>
-        <% end %>
+      <div class='row'>
 
+        <div class='span12 media event-card'>
 
-        <div class='media-body'>
-          <%= link_to user_event_path( event.user, event ) do %>
-            <h3>
-              <%= event.kind %> event
-            </h3>
+          <%= link_to user_event_path( event.user, event ), :class => 'pull-left' do %>
+            <%= image_tag gravatar_url( event.user, 64 ), 
+                          :class => 'media-object img-rounded',
+                          'data-src' => 'holder.js/64x64' %>
           <% end %>
-          
-          <small>
-            <%= event.created_at.to_s :human_brief %>
-          </small>
 
-          <p class='muted'><%= event.user.name %></p>
 
-          <p><%= event.summary %></p>
+          <div class='media-body'>
+            <%= link_to user_event_path( event.user, event ) do %>
+              <h3>
+                <%= event.kind %> event
+              </h3>
+            <% end %>
+            
+            <small>
+              <%= event.created_at.to_s :human_brief %>
+            </small>
+
+            <p class='muted'><%= event.user.name %></p>
+
+            <p><%= event.summary %></p>
+
+          </div>
 
         </div>
 
       </div>
 
-    </div>
+    <% end %>
 
-  <% end %>
+  </section>
 
-</section>
+<% end %>
+
+<% if (@events + @users).empty? %>
+
+  <section id='noResults'>
+    
+    <p class='lead'>
+      It seems there are no Users or Events that match your search terms.
+    </p>
+    
+    <% if @search_terms.split( ' ' ).size > 1 %>
+      <p>
+        Perhaps you'll have better luck if you just search '<%= @search_terms.split(' ')[0] %>' or '<%= @search_terms.split(' ')[1] %>'.
+      </p>
+    <% else %>
+      <p>
+        Perhaps you'll have better luck with a simpler search.
+      </p>
+    <% end %>
+
+  </section>
+
+<% end %>
