Improve instructions for downloading git-client-side integration.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,6 +29,11 @@
   }
 }
 
+.code {
+  font-family : monospace;
+  white-space : pre;
+}
+
 .landing-page-header {
   height : 400px;
   margin-bottom : 40px;
