Tweaking git-client-side install instructions.

--- a/app/views/integrations/show.html.erb
+++ b/app/views/integrations/show.html.erb
@@ -1,4 +1,4 @@
-<h2><%= integration.name %></h2>
+<h2 class='page-header'><%= integration.name %></h2>
 
 <p><%= integration.description %></p>
 
@@ -10,17 +10,17 @@
 
 <div>
   
+  <p class='lead page-header'>
+    Step-by-step installation instructions:
+  </p>
   <p>
     To install, do the following from the root directory of your git project:
     <ol>
       <li><span class='code'>cd .git/hooks</span></li>
-      <li><span class='code'>wget <%= integrations_downloads_gcs_pc_path( current_user.api_key )%></span></li>
+      <li><span class='code'>wget <%= integrations_downloads_gcs_pc_url( current_user.api_key )%></span></li>
       <li><span class='code'>chmod +x post-commit</span></li> 
     </ol>
-  </p>
-  
-  <p>
-    Or you can manually download the post-commit hook <%= link_to 'here.', integrations_downloads_gcs_pc_path( current_user.api_key ) %>
+    And that's it! Your next local commit will be logged to OpsTab as a 'Local Git Commit' event.<br /><br />
   </p>
 
 </div>
