Fixing 500 error when approving follow request. Also tweaking landing-page copy.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,10 +3,10 @@
   <div class='container'>
     <div class='row'>
       <div class='span6'>
-      <h3>Hey, Smooth Operator.</h3>
+      <h3>Meet OpsTab.</h3>
       <p>
-        OpsTab reduces 'notification noise' and gives your organization insight 
-        into how your processes are performing.
+        OpsTab reduces notification noise by letting members of your organization
+        receive only the alerts that are important to them.
       </p>
       <%= link_to 'Sign Up for Free', new_user_registration_path, :class => 'btn btn-large btn-primary' %>
       </div>
