Replacing instances of 'HelloJustin Notifier' with 'OpsTab'.

--- a/app/views/followings/edit.html.erb
+++ b/app/views/followings/edit.html.erb
@@ -8,7 +8,7 @@
 
     <p>
       If you approve this request, <%= following.following_user.email %> will be 
-      able to see the events that you post to the HelloJustin Notifier.
+      able to see the events that you post to OpsTab.
     </p>
 
     <div>
