--- a/app/views/followings_mailer/follow_request.html.erb
+++ b/app/views/followings_mailer/follow_request.html.erb
@@ -12,8 +12,8 @@
     </p>
 
     <p>
-      <%= @following_user.email %> would like to follow you on the 
-      HelloJustin.net Notifier. If you choose to approve this request, 
+      <%= @following_user.email %> would like to follow you on OpsTab. 
+      If you choose to approve this request, 
       <%= @following_user.email %> will be able to receive notifications when 
       you post events to the notifier.
     </p>
@@ -27,7 +27,7 @@
     </p>
 
     <p>
-      - The HelloJustin.net Notifier
+      - OpsTab
     </p>
   
   </body>
