--- a/app/views/followings_mailer/follow_request.text.erb
+++ b/app/views/followings_mailer/follow_request.text.erb
@@ -1,7 +1,7 @@
 Hi <%= @followed_user.email %>,
 
-<%= @following_user.email %> would like to follow you on the 
-HelloJustin.net Notifier. If you choose to approve this request, 
+<%= @following_user.email %> would like to follow you on OpsTab.
+If you choose to approve this request, 
 <%= @following_user.email %> will be able to receive notifications when 
 you post events to the notifier.
 
@@ -10,4 +10,4 @@ approve this request.
 
 Thanks!
 
-- The HelloJustin.net Notifier
+- OpsTab
