--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -8,19 +8,22 @@
       <div class='span8 media event-card'>
 
         <%= link_to user_path( event.user ), :class => 'pull-left' do %>
-          <%= image_tag gravatar_url( event.user, 64 ), 
+          <%= image_tag gravatar_url( event.user, 40 ), 
                         :class => 'media-object img-rounded',
                         'data-src' => 'holder.js/64x64' %>
         <% end %>
 
         <div class='media-body'>
-          <h3>
-            <%= event.kind %> event
-          </h3>
-          
-          <small>
+
+          <small class='pull-right'>
             <%= event.created_at.to_s :human_brief %>
           </small>
+
+          <%= link_to user_event_path( event.user, event ) do %>
+            <h3>
+              <%= event.kind %> event
+            </h3>
+          <% end %>
 
           <p class='muted'><%= event.user.name %></p>
 
