--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -11,21 +11,21 @@
     <div class='span8 media notification-card'>
 
       <%= link_to user_path( notification.event.user ), :class => 'pull-left' do %>
-        <%= image_tag gravatar_url( notification.event.user, 64 ), 
+        <%= image_tag gravatar_url( notification.event.user, 40 ), 
                       :class => 'media-object img-rounded',
                       'data-src' => 'holder.js/64x64' %>
       <% end %>
 
       <div class='media-body'>
+        <small class='pull-right'>
+          <%= notification.created_at.to_s :human_brief %>
+        </small>
+
         <%= link_to user_event_path( notification.event.user, notification.event ) do %>
           <h3>
             <%= notification.event.kind %> event
           </h3>
         <% end %>
-
-        <small>
-          <%= notification.created_at.to_s :human_brief %>
-        </small>
 
         <p class='muted'><%= notification.event.user.name %></p>
 
