--- a/app/views/search_results/index.html.erb
+++ b/app/views/search_results/index.html.erb
@@ -65,22 +65,23 @@
         <div class='span12 media event-card'>
 
           <%= link_to user_event_path( event.user, event ), :class => 'pull-left' do %>
-            <%= image_tag gravatar_url( event.user, 64 ), 
+            <%= image_tag gravatar_url( event.user, 40 ), 
                           :class => 'media-object img-rounded',
                           'data-src' => 'holder.js/64x64' %>
           <% end %>
 
 
           <div class='media-body'>
+            
+            <small class='pull-right'>
+              <%= event.created_at.to_s :human_brief %>
+            </small>
+
             <%= link_to user_event_path( event.user, event ) do %>
               <h3>
                 <%= event.kind %> event
               </h3>
             <% end %>
-            
-            <small>
-              <%= event.created_at.to_s :human_brief %>
-            </small>
 
             <p class='muted'><%= event.user.name %></p>
 
