Removing the word 'event' from list item titles on events and notifications pages.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -21,7 +21,7 @@
 
           <%= link_to user_event_path( event.user, event ) do %>
             <h3>
-              <%= event.kind %> event
+              <%= event.kind %>
             </h3>
           <% end %>
 
