--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -23,7 +23,7 @@
 
         <%= link_to user_event_path( notification.event.user, notification.event ) do %>
           <h3>
-            <%= notification.event.kind %> event
+            <%= notification.event.kind %>
           </h3>
         <% end %>
 
