Using user's name instead of email where it makes sense. Also doing a little code cleanup around search.

--- a/app/views/followings_mailer/follow_request.html.erb
+++ b/app/views/followings_mailer/follow_request.html.erb
@@ -8,13 +8,13 @@
   <body>
   
     <p>
-      Hi <%= @followed_user.email %>,
+      Hi <%= @followed_user.name %>,
     </p>
 
     <p>
-      <%= @following_user.email %> would like to follow you on OpsTab. 
+      <%= @following_user.name %> would like to follow you on OpsTab. 
       If you choose to approve this request, 
-      <%= @following_user.email %> will be able to receive notifications when 
+      <%= @following_user.name %> will be able to receive notifications when 
       you post events to the notifier.
     </p>
 
