--- a/app/views/followings_mailer/follow_request.text.erb
+++ b/app/views/followings_mailer/follow_request.text.erb
@@ -1,8 +1,8 @@
-Hi <%= @followed_user.email %>,
+Hi <%= @followed_user.name %>,
 
-<%= @following_user.email %> would like to follow you on OpsTab.
+<%= @following_user.name %> would like to follow you on OpsTab.
 If you choose to approve this request, 
-<%= @following_user.email %> will be able to receive notifications when 
+<%= @following_user.name %> will be able to receive notifications when 
 you post events to the notifier.
 
 Please log into your account at http://notifications.hellojustin.net to 
