--- a/app/views/followings/edit.html.erb
+++ b/app/views/followings/edit.html.erb
@@ -3,11 +3,11 @@
   <% if following.approver? current_user %>
 
     <p class='lead'>
-      <%= following.following_user.email %> would like to follow you!
+      <%= following.following_user.name %> would like to follow you!
     </p>
 
     <p>
-      If you approve this request, <%= following.following_user.email %> will be 
+      If you approve this request, <%= following.following_user.name %> will be 
       able to see the events that you post to OpsTab.
     </p>
 
@@ -28,12 +28,12 @@
   <% elsif following.requester? current_user %>
 
     <p class='lead'>
-      You've sent a follow request to <%= following.followed_user.email %>
+      You've sent a follow request to <%= following.followed_user.name %>
     </p>
 
     <% if following.pending_approval? %>
       <p>
-        This request must be verified by <%= following.following_user.email %>
+        This request must be verified by <%= following.following_user.name %>
         before you will be allowed notifications of their events.
       </p>
     <% end %>
