--- a/app/views/layouts/landing_page.html.erb
+++ b/app/views/layouts/landing_page.html.erb
@@ -8,6 +8,7 @@
     <meta name="author" content="">
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag 'ga' %>
     <%= csrf_meta_tags %>
     <%= yield(:head) %>
   </head>
